tests/_resources/error_gcns/E014_invalid_tag.gcn
# Error: Invalid equation tag (@invalid instead of @exclude)
block TEST
{
    identities
    {
        @invalid
        Y[] = C[];
    };
};
